# math-lib

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: check.yaml
scripts/: __init__.py  arithmetic.py  collection.py  figures.py  simple.py
tests/: test_arithmetic.py  test_collection.py  test_figures.py
