[tool.poetry]
name = "math-lib"
version = "0.1.0"
description = "This is math-lib"
authors = ["nbagr <86910204+nbagr@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
